k8s/DB-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: database
spec:
  serviceName: sts-db-service
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql-db
        image: mcr.microsoft.com/mssql/server:2022-latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1433
          name: mssql-db
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        volumeMounts:
        - name: mssql-data
          mountPath: /var/opt/mssql
        livenessProbe:
          tcpSocket:
            port: 1433
          initialDelaySeconds: 60
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 1433
          initialDelaySeconds: 30
          periodSeconds: 10

        securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false

  volumeClaimTemplates:
  - metadata:
      name: mssql-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 10Gi
