k8s/mailpit-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mailpit-deployment
  namespace: ${KUBE_NAMESPACE}

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mailpit

  template:
    metadata:
      labels:
        app: mailpit

    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:latest

          ports:
            - containerPort: 1025
            - containerPort: 8025
