k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ${KUBE_NAMESPACE}
  labels:
    svc: backend-service
    
spec:
  selector:
    app: backend

  ports:
    - port: 80
      targetPort: 8080
      name: http

  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ${KUBE_NAMESPACE}
  labels:
    svc: frontend-service

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 5173
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service

metadata:
  name: sts-db-service
  namespace: ${KUBE_NAMESPACE}
  labels:
    svc: sts-db-service

spec:
  clusterIP: None

  selector:
    app: database

  ports:
    - port: 1433
      targetPort: 1433
      name: mssql
---
apiVersion: v1
kind: Service

metadata:
  name: mailpit-service
  namespace: ${KUBE_NAMESPACE}

spec:
  selector:
    app: mailpit

  ports:
    - name: smtp
      port: 1025
      targetPort: 1025

    - name: web
      port: 8025
      targetPort: 8025

  type: ClusterIP
