k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: athletiqa-ingress
  namespace: ${KUBE_NAMESPACE}

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik

  rules:
    # FRONTEND REVIEW 
    - host: ${CI_COMMIT_REF_SLUG}.cc.k3s.chas-lab.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    # FRONTEND DEMO 
    - host: athletiqa.cc.k3s.chas-lab.dev 
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend: 
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: frontend-service
                port:
                  number: 80

    # BACKEND API
    - host: api-athletiqa.cc.k3s.chas-lab.dev
      http:
        paths:
          - path: /

            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

    # MAILPIT UI 
    - host: mailpit-athletiqa.cc.k3s.chas-lab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit-service
                port:
                  number: 8025
