k8s/db-nw-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
  namespace: ${KUBE_NAMESPACE}

spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${KUBE_NAMESPACE}
          podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 1433
